// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with expected snapshot for desktop 1`] = `
<Styled(div)>
  <Styled(ul)>
    <Styled(a)
      data-test="burger-logo"
      href="http://www.google.com"
    >
      <Logo
        small={false}
      />
    </Styled(a)>
  </Styled(ul)>
</Styled(div)>
`;

exports[`renders with expected snapshot for mobile 1`] = `
<Styled(div)>
  <Styled(ul)>
    <Styled(a)
      data-test="burger-logo"
      href="http://www.google.com"
    >
      <Logo
        small={true}
      />
    </Styled(a)>
  </Styled(ul)>
</Styled(div)>
`;
